corrected macOS app build